also shave 1px off max breakpoint px value on screen() mixin to fix border on jumpto nav at exact breakpoint-md breakpoint

--- a/web/app/themes/ilsfa/assets/styles/common/_mixins.scss
+++ b/web/app/themes/ilsfa/assets/styles/common/_mixins.scss
@@ -141,7 +141,7 @@
 
 // On-the fly media-queries
 @mixin screen($res-min, $res-max) {
-  @media screen and (min-width: $res-min) and (max-width: $res-max) {
+  @media screen and (min-width: $res-min) and (max-width: #{$res-max - 1px}) {
     @content;
   }
 }
